--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 Greetings. My name is Zhengcong Yin, graduated with Ph.D. from the Department of Geography, Texas A&M University. During my Ph.D. studies, I worked at <a href="http://geoservices.tamu.edu/" style="color:black"><u>Texas A&M Geoservices</u></a> with Dr. Daniel W. Goldberg. My research primarily focuses on Geocoding/Reverse Geocoding Algorithms and Systems. I am also doing researches in GeoAI and deep learning approaches for remote sensing. 
               </p>
               <p class="lead mb-0"> 
-                The overwhelming envision of my works is to allow people using location services for daily lives and academic research investigation seamlessly
+                The overwhelming envision of my works is to allow people using location services for daily lives and academic research investigation seamlessly and to make novice users have more spatial awareness via geospatial techniques and applications.  
                 If you want to discuss about research topics or simply wanted to discuss how to apply location services to public health research/applications, please don't hesitate to send me <a href = "mailto:yinzhengcong0116@gmail.com">emails</a>.
               </p>
             </div>
@@ -183,7 +183,7 @@
             </div>
             <div class="col-lg-8 my-auto showcase-text">
                 <h6>Software Development Engineer, Redlands, California, 2020 - Present </h6>
-                <p class="lead mb-0"><a href="https://www.esri.com/arcgis-blog/products/image-server/imagery/introducing-deep-learning-studio-for-arcgis-image-server/" style="color:black"><u>ArcGIS Deep Learning Studio</u></a> - an end-to-end multi-user& collaborative Labeling, Model Training, Inferencing platform</p>
+                <p class="lead mb-0"><a href="https://www.esri.com/arcgis-blog/products/image-server/imagery/introducing-deep-learning-studio-for-arcgis-image-server/" style="color:black"><u>ArcGIS Deep Learning Studio</u></a> - an end-to-end online deep learning platform that enables multi-user& collaborative Data Labeling, Model Training, and Inferencing</p>
             </div>
         </div>
 		 <p style="padding:10px"></p>
