--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
             <h4 class="mb-4 text-lg-left">Conference Committee</h4>
             <div class="row">
                 <div class="col-lg-12 my-auto showcase-text text-left">
-                    Session  Chair,  Techniques  and  GIS  for  Health,  Annual  Meeting  of  the  Association  of  AmericanGeographers.  Washington, D.C. April, 2019
+                    Session  Chair,  Techniques  and  GIS  for  Health,  Annual  Meeting  of  the  Association  of  American Geographers(AAG).  Washington, D.C. April, 2019
                 </div>
             </div>
         </div>
