--- a/index.html
+++ b/index.html
@@ -143,6 +143,13 @@
        
             <p style="padding:5px"></p>
             <h4 class="mb-4 text-lg-left">Conference</h4>
+
+              <div class="row">
+                <div class="col-lg-12 my-auto showcase-text text-left">
+                    <h8>4. <b>Yin, Z.</b>, Li, D., Goldberg, D.W. (2023). Is ChatGPT a game changer for geocoding - a benchmark for geocoding address parsing techniques. Hamburg, Germany.</h8>
+                </div>
+            </div>
+            <p style="padding:5px"></p>
             
              <div class="row">
                 <div class="col-lg-12 my-auto showcase-text text-left">
