--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
               <div class="row">
                 <div class="col-lg-12 my-auto showcase-text text-left">
-                    <h8>4. <b>Yin, Z.</b>, Li, D., Goldberg, D.W. (2023). Is ChatGPT a game changer for geocoding - a benchmark for geocoding address parsing techniques. Hamburg, Germany.</h8>
+                    <h8>5. <b>Yin, Z.</b>, Li, D., Goldberg, D.W. (2023). Is ChatGPT a game changer for geocoding - a benchmark for geocoding address parsing techniques. The 2nd ACM SIGSPATIAL International Workshop on Searching and Mining Large Collections of Geospatial Data. Hamburg, Germany.</h8>
                 </div>
             </div>
             <p style="padding:5px"></p>
