--- a/index.html
+++ b/index.html
@@ -261,6 +261,12 @@
         <div class="container">
           <h2 class="mb-5 text-lg-left">Services</h2>
           <h4 class="mb-4 text-lg-left">Journal Review</h4>
+            <div class="row">
+              <div class="col-lg-12 my-auto showcase-text text-left">
+                  <h8>Scientific Reports - Nature</h8>
+              </div>
+          </div>
+           <p style="padding:5px"></p>
           <div class="row">
               <div class="col-lg-12 my-auto showcase-text text-left">
                   <h8>International Journal of Geographical Information Science</h8>
@@ -298,11 +304,18 @@
                   <h8>Remote Sensing</h8>
               </div>
           </div>
+
+		  <p style="padding:5px"></p>
+          <div class="row">
+              <div class="col-lg-12 my-auto showcase-text text-left">
+                  <h8>Mathematics</h8>
+              </div>
+          </div>
 		  
 		  	  <p style="padding:5px"></p>
           <div class="row">
               <div class="col-lg-12 my-auto showcase-text text-left">
-                  <h8>Mathematics</h8>
+                  <h8>Agronomy</h8>
               </div>
           </div>
 
